# wa2x_test_tool

./: .gitignore  Cargo.toml
get_bin/: Cargo.toml
get_bin/src/: main.rs
get_bin/wasm/: aead_aegis128l.wasm  aead_aegis256.wasm  aead_aes256gcm.wasm  aead_aes256gcm2.wasm  aead_chacha20poly1305.wasm  aead_chacha20poly13052.wasm  aead_xchacha20poly1305.wasm  auth.wasm  auth2.wasm  auth3.wasm  auth5.wasm  auth6.wasm  auth7.wasm  box.wasm  box2.wasm  box7.wasm  box8.wasm  box_easy.wasm  box_easy2.wasm  box_seal.wasm  box_seed.wasm  chacha20.wasm  codecs.wasm  core1.wasm  core2.wasm  core3.wasm  core4.wasm  core4.wat  core5.wasm  core6.wasm  core_ed25519.wasm  core_ristretto255.wasm  ed25519_convert.wasm  generichash.wasm  generichash2.wasm  generichash3.wasm  hash.wasm  hash3.wasm  kdf.wasm  kdf_hkdf.wasm  (+41 more)
get_data/: Cargo.toml
get_data/src/: main.rs
src/: lib.rs
