workspace = { members = ["get_bin", "get_data"] }
[package]
name = "wa2x_test_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
runtime= { path = "../iwasm-rust/runtime" ,default-features = false ,features=["elf_loader","wasi","std","unwinding","personality","fde-static"]}
